# bookwormfood

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  eslint.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
isbn_wasm_mod/: Cargo.toml
isbn_wasm_mod/data-samples/: google-books-error-resp.json
isbn_wasm_mod/src/: google.rs  http_req.rs  lib.rs  storage.rs  utils.rs  wasm_response.rs
isbn_wasm_mod/src/models/: book.rs  book_status.rs  books.rs
lambdas/client-sync/: Cargo.toml  deploy.sh
lambdas/client-sync/src/: jwt.rs  main.rs
lambdas/index-html-server/: Cargo.toml  apigw-resp.json  deploy.sh
lambdas/index-html-server/src/: google.rs  main.rs
media/open-book-sketch-freepik/: 4339.eps
public/: index.html
react-scr/components/: auth0-provider-with-navigate.js  bookDetails.js  navbar.js
rust/lambdas/client-sync/: Cargo.toml  deploy-proxy.sh  deploy.sh
rust/lambdas/client-sync/src/: book.rs  main.rs  photo.rs  pic.rs
rust/lambdas/client-sync/src/models/: book.rs
rust/lambdas/index-html-server/: Cargo.toml  deploy-proxy.sh  deploy.sh
rust/lambdas/index-html-server/data-samples/: apigw-req.json  cloudfront-req.json
rust/lambdas/index-html-server/src/: index.rs  main.rs
rust/lambdas/photo-tracker/: Cargo.toml  deploy-proxy.sh  deploy.sh
rust/lambdas/photo-tracker/src/: main.rs  photo.rs
rust/lambdas/share-handler/: Cargo.toml  deploy-proxy.sh  deploy.sh
rust/lambdas/share-handler/src/: main.rs  share.rs
rust/types/: Cargo.toml
rust/types/src/: book.rs  google.rs  jwt.rs  lambda.rs  lib.rs
rust/wasm_mod/: Cargo.toml
rust/wasm_mod/src/: book.rs  books.rs  google.rs  http_req.rs  lib.rs  photos.rs  pic.rs  sync.rs  utils.rs  wasm_response.rs
rust/wasm_mod/src/models/: book.rs  book_status.rs  mod.rs
src/: index.js
src/components/: about.js  app.js  auth0-provider-with-navigate.js  authCallback.js  authLogin.js  authLogout.js  bookDetails.js  externalApi.js  navbar.js  scan.js  scanResult.js  welcome.js
src/css/: icon-moon.css  index.css
src/wasm-rust/: isbn_mod.js  isbn_mod_bg.wasm
src/wasm-rust/snippets/wasm_mod-bc4ca452742d1bb1/src/: upload_file.js
vue/: index.html  package-lock.json  package.json
vue/src/: App.vue  interfaces.ts  main.ts  store.ts
vue/src/assets/: icon-moon.css  main.css
vue/src/components/: NavBar.vue
vue/src/components/conv/: ChatGPT41ImprovedPrompt.vue  Claude35Sonnet.vue  Claude37Sonnet.vue  Gemini25Pro.vue  NavBar.vue
vue/src/components/conv/writeup/: README.md
vue/src/router/: index.ts
vue/src/views/: AboutView.vue  BookDetailsView.vue  ScanView.vue  WelcomeView.vue
vue/src/wasm-rust/: isbn_mod.d.ts  isbn_mod.js  isbn_mod_bg.wasm  isbn_mod_bg.wasm.d.ts
