[workspace]
members = ["isbn_wasm_mod", "lambdas/index-html-server"]
resolver = "2"

[workspace.dependencies]
lambda_runtime = { version = "0.12", default-features = false }
tokio = { version = "1.16", features = [
  "macros",
  "io-util",
  "sync",
  "rt-multi-thread",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws_lambda_events = "0.15.1"
aws-sdk-s3 = "1.40.0"
regex = "1.10.5"

[profile.release]
lto = true
codegen-units = 1
