[package]
name = "bookworm_types"
version = "0.1.0"
edition = "2021"
authors = ["rimutaka <max@onebro.me>"]
description = "Shared types and models for bookworm.im"
license = "GPL 3.0"

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
jsonwebtoken = "9.3.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
