[package]
name = "client-sync"
version = "0.2.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2021"
description = "Returns modified index.html from S3"
license = "AGPL-3.0"

[dependencies]
bookwormfood_types = { path = "../../types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
# aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
regex = { workspace = true }
# reqwest = { version = "0.12", features = [
#   "json",
#   "rustls-tls-native-roots",
#   "http2",
#   "charset",
# ], default-features = false }
jsonwebtoken = "9.3.0"
chrono = { workspace = true }
anyhow = { workspace = true }
