[package]
name = "photo-tracker"
version = "0.2.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2021"
description = "Updates book details when user photos are added or deleted from S3"
license = "AGPL-3.0"

[dependencies]
bookworm_types = { path = "../../types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true, features = ["anyhow"]}
aws_lambda_events = { workspace = true }
# aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
regex = { workspace = true }
# reqwest = { version = "0.12", features = [
#   "json",
#   "rustls-tls-native-roots",
#   "http2",
#   "charset",
# ], default-features = false }
jsonwebtoken = "9.3.0"
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
aws-smithy-runtime-api = "1.7.2"
